deploy: b3eb283ecf17c9183e637fcd8a072ddf7cc84be4

--- a/guide/props.html
+++ b/guide/props.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/react-command-palette/assets/style.I6iB0jj1.css" as="style">
     <link rel="preload stylesheet" href="/react-command-palette/vp-icons.css" as="style">
     
-    <script type="module" src="/react-command-palette/assets/app.DOUZ2ron.js"></script>
+    <script type="module" src="/react-command-palette/assets/app.CYEUrRDf.js"></script>
     <link rel="preload" href="/react-command-palette/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/react-command-palette/assets/chunks/theme.DfuPf5dP.js">
+    <link rel="modulepreload" href="/react-command-palette/assets/chunks/theme.BUIufGLj.js">
     <link rel="modulepreload" href="/react-command-palette/assets/chunks/framework.CxbIPHq9.js">
     <link rel="modulepreload" href="/react-command-palette/assets/guide_props.md.DEclINz_.lean.js">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
